# internship_sat

./: .gitignore  README.md  note.txt
code/: agent2agent.ipynb  agent_h_i_loop.ipynb  agent_with_langchain.ipynb  langGraphExample.ipynb  main.ipynb  multiAgent.ipynb  pyproject.toml  system_design.excalidraw
code/multi_agent/: .gitignore  notes.txt  research.ipynb
code/multi_agent/prompts/: copywriter.md  researcher.md
deep_L_course/: EssayWriter.ipynb  Human_I_Loop.ipynb  graph.ipynb
engine/prompts/: generations.md
topic/: Proposition de PFA _Sujet3.docx
