[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-postgres>=3.1.0",
    "openrouter>=0.11.32",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
    "tavily-python>=0.7.26",
]
